[package]
name = "redismultiplexer"
version = "1.0.5"
edition = "2021"
description = "This is a program to transfer data from queues (push/pop) between different Redis server"
license = "Apache-2.0"
homepage = "https://github.com/juanmitaboada/redismultiplexer"
repository = "https://github.com/juanmitaboada/redismultiplexer"
documentation = "https://github.com/juanmitaboada/redismultiplexer"
readme = "README.md"
authors = ["Juanmi Taboada <juanmi@juanmitaboada.com>"]

[package.metadata.deb]
maintainer = "Juanmi Taboada <juanmi@juanmitaboada.com>"
copyright = "2022, Juanmi Taboada <juanmi@juanmitaboada.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
RedisMultiplexer will take care of your queues in Redis. \
The purpose is to move packages from a source queue to a \
target queue that may be or not be in the same server and \
port."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/redismultiplexer", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/redismultiplexer/README", "644"],
    ["etc/default.yaml-orig", "etc/redismultiplexer/", "644"],
    ["systemctl/redismultiplexer.service", "lib/systemd/system/", "644"],
    ["systemctl/redismultiplexer@.service", "lib/systemd/system/", "644"],
]
maintainer-scripts = "scripts/"
changelog = "CHANGELOG"

[features]
debug = []
#default = ["debug"]

[dependencies]
redis = { version = "0.19.0", features = ["tls", "r2d2"] }
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thread_tryjoin = "0.3.0"
ctrlc = "3.2.2"
dict = "0.1.5"
regex = "1.5.6"
serde_json = "1.0.82"
build-time = "0.1.1"
